tests/snapshots/tui_snapshots__job_progress_move.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
"◜ moving ID0248 · 1 of 2 · copying 12 of 34 files    → projects 12   archive not … ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0247 2026-08-2┌ moving ────────────────────────────────────────────────────┐-28               │"
"│  ID0246 2026-08-2│ 1 of 2  2026-08-28_Lullaby_Remix_ID0248                    │                  │"
"│  ID0245 2026-08-2│ ✓ scanned                      41 entries                  │───────────────── │"
"│  ID0244 2026-08-2│ ✓ checked the original's base                              │                  │"
"│  ID0243 2026-08-2│ ▸ copying                      12 of 34 files              │                  │"
"│  ID0242 2026-08-2│   ███████████░░░░░░░░░░░░░░░░░░░░░░  34%  1.1 MB of 3.3 MB │                  │"
"│  ID0241 2026-08-2│   03_Assets/raw/footage_A001.mov                           │                  │"
"│  ID0240 2026-08-2│   verifying                                                │                  │"
"│  ID0239 2026-08-1│   publishing PROJECT_INFO.md                               │                  │"
"│  ID0238 2026-08-1│   setting the original aside                               │                  │"
"│  ID0237 2026-08-1│   checking the old copy                                    │                  │"
"│                  │   removing the old copy                                    │                  │"
"│                  │   clearing the record                                      │                  │"
"│                  │                                                            │                  │"
"│                  │ Esc hides · Ctrl-c cancels · it goes on if fastf closes    │                  │"
"│                  └────────────────────────────────────────────────────────────┘                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" / search  a actions  o open  t terminal  y copy path  Space mark  n new  T templates  → pane       "
