tests/snapshots/tui_snapshots__journal_view.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ A Fiverr music video: treatment  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ approved, shoot booked           │"
"│  ID0246 2026-┌ ID0248 · notes ────────────────────────────────────────────────────┐rojects       │"
"│  ID0245 2026-│ 2026-08-28  first cut sent to the label                            │              │"
"│  ID0244 2026-│ 2026-08-29  revision two uploaded                                  │              │"
"│  ID0243 2026-│ 2026-08-30  final mix approved                                     │───────────── │"
"│  ID0242 2026-│                                                                    │              │"
"│  ID0241 2026-│                                                                    │              │"
"│  ID0240 2026-│                                                                    │              │"
"│  ID0239 2026-│                                                                    │              │"
"│  ID0238 2026-│                                                                    │              │"
"│  ID0237 2026-│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
