tests/snapshots/tui_snapshots__loading_80x24.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates                                              "
" probing bases…                                                                 "
" ⌕ / to search                                      0/0 (from index) ◜ · newest "
"┌ projects ────────────────────────────────────────────────────────────────────┐"
"│  ID   PROJECT                                  SIZE CREATED    BASE TEMPLATE │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" reading the library…                                                           "
" / search  a actions  o open  t terminal  y copy path  Space mark  n new        "
