tests/snapshots/tui_snapshots__messages_open.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · oldest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│  ID0237 2026-08-17_Live_Session_ID0237             scanning… ││ A Fiverr music video: treatment  │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238          scanning… ││ approved, shoot booked           │"
"│  ID0239 2026-┌ activity ──────────────────────────────────────────────────────────┐rojects       │"
"│  ID0240 2026-│ ▸ messages     jobs     log   Tab turns the page · newest first    │              │"
"│  ID0241 2026-│                                                                    │              │"
"│  ID0242 2026-│ 10:00:00  ⚠ warning: the archive base is not mounted               │───────────── │"
"│  ID0243 2026-│ 10:00:00  sorted by oldest                                         │              │"
"│  ID0244 2026-│                                                                    │              │"
"│  ID0245 2026-│                                                                    │              │"
"│  ID0246 2026-│                                                                    │              │"
"│  ID0247 2026-│                                                                    │              │"
"│▸ ID0248 2026-│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
" warning: the archive base is not mounted                                                           "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
