tests/snapshots/tui_snapshots__metadata_view.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ created 2026-08-28               │"
"│  ID0246 2026-┌ ID0248 · metadata ─────────────────────────────────────────────────┐              │"
"│  ID0245 2026-│ id               ID0248                                            │───────────── │"
"│  ID0244 2026-│ template         music-video                                       │              │"
"│  ID0243 2026-│ template_name    Music video                                       │              │"
"│  ID0242 2026-│ created          2026-08-28T10:00:00Z                              │              │"
"│  ID0241 2026-│ folder           2026-08-28_Lullaby_Remix_ID0248                   │              │"
"│  ID0240 2026-│ base             /mnt/projects                                     │              │"
"│  ID0239 2026-│ path             2026-08-28_Lullaby_Remix_ID0248                   │              │"
"│  ID0238 2026-│                                                                    │              │"
"│  ID0237 2026-│ tags:                                                              │              │"
"│              │   • draft                                                          │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
