tests/snapshots/tui_snapshots__move_progress_removing.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
"◜ moving ID0248 · removing the old copy 17 of 41 entries    → projects 12   archi… ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0247 2026-08-2┌ moving ────────────────────────────────────────────────────┐-28               │"
"│  ID0246 2026-08-2│ ✓ scanned                      41 entries                  │                  │"
"│  ID0245 2026-08-2│ ✓ checked the original's base                              │───────────────── │"
"│  ID0244 2026-08-2│ ✓ copied                       34 files                    │                  │"
"│  ID0243 2026-08-2│ ✓ verified                     81 entries                  │                  │"
"│  ID0242 2026-08-2│ ✓ published PROJECT_INFO.md                                │                  │"
"│  ID0241 2026-08-2│ ✓ set the original aside       82 entries                  │                  │"
"│  ID0240 2026-08-2│ ✓ checked the old copy         82 entries                  │                  │"
"│  ID0239 2026-08-1│ ▸ removing the old copy        17 of 41 entries            │                  │"
"│  ID0238 2026-08-1│   █████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  41% │                  │"
"│  ID0237 2026-08-1│   03_Assets/raw                                            │                  │"
"│                  │   clearing the record                                      │                  │"
"│                  │                                                            │                  │"
"│                  │ Esc hides · it finishes by itself, even if fastf closes    │                  │"
"│                  └────────────────────────────────────────────────────────────┘                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" / search  a actions  o open  t terminal  y copy path  Space mark  n new  T templates  → pane       "
