tests/snapshots/tui_snapshots__move_progress_short.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases highest ID0248 "
"◜ moving ID0248 · removing the old copy 1… ⚠ 1 needs you  ! "
"┌ moving ──────────────────────────────────────────────────┐"
"│ ▸ removing the old copy  17 of 41 entries                │"
"│   ████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  41% │"
"│   03_Assets/raw                                          │"
"│                                                          │"
"│ Esc hides · it finishes by itself, even if fastf closes  │"
"└──────────────────────────────────────────────────────────┘"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
" → details  / search  a actions  o open  t terminal         "
