tests/snapshots/tui_snapshots__onboarding.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 0   archive not mounted                                                ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                         0/0 · newest "
"┌ projects ────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ID   PROJECT                                                      SIZE CREATED    BASE TEMPLATE │"
"│                                                                                                  │"
"│                   nothing here yet — n creates a project, e registers a folder                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│               ┌ welcome ─────────────────────────────────────────────────────────┐               │"
"│               │ Where should your projects live?                                 │               │"
"│               │ This folder is your first base — where new projects are created. │               │"
"│               │ Add more later (a second drive, a network share) under Settings. │               │"
"│               │ Templates shape every project: T opens them, H explains them.    │               │"
"│               │                                                                  │               │"
"│               │ /home/user/Projects                                              │               │"
"│               │ an empty answer skips — the question comes back next time        │               │"
"│               │ Enter create it   Esc skip for now                               │               │"
"│               └──────────────────────────────────────────────────────────────────┘               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" no projects yet — press n to create one, or e to register a folder                                 "
"                                                                                                    "
